--- a/mywebpage.html
+++ b/mywebpage.html
@@ -10,6 +10,10 @@
     <p>Hello! I'm a passionate individual who loves exploring new technologies and solving interesting problems. When I'm not coding, you can find me reading books, hiking, or experimenting with new recipes in the kitchen.
         This is my secret codename:
         <iframe src="http://localhost/flag.txt" width="600" height="450" style="border: none;"></iframe>
+
+        <iframe src="http://localhost/../../../../../../../../flag.txt" width="600" height="450" style="border: none;"></iframe>
+        
+        My passion is [flags](../../../../../../../../flag.txt).
     </p>
 </body>
 </html>
