--- a/mywebpage2.html
+++ b/mywebpage2.html
@@ -7,15 +7,11 @@
 </head>
 <body>
     <h1>About Me</h1>
-    <p>Hello! I'm a passionate individual who loves exploring new technologies and solving interesting problems. When I'm not coding, you can find me reading books, hiking, or experimenting with new recipes in the kitchen.
-        This is my secret codename:
-    
-        My passion is for blue [flags](/flag.txt).
-
-
-        <iframe src="/flag.txt" width="600" height="450" style="border: none;"></iframe>
+    <p>Hello! I'm a flag enthusiast who loves exploring new technologies and solving interesting problems. When I'm not coding, you can find me reading books, hiking, or experimenting with new recipes in the kitchen.
         
-        and also red [flags](../../../../../../../../flag.txt).
+        My passion is for blue [flags](/flag.txt) and also red [flags](../../../../../../../../flag.txt).
+
+        My favorite flag is called <iframe src="/flag.txt" width="600" height="450" style="border: none;"></iframe>
     </p>
 </body>
 </html>
