--- a/mywebpage2.html
+++ b/mywebpage2.html
@@ -11,7 +11,9 @@
         
         My passion is for blue [flags](/flag.txt) and also red [flags](../../../../../../../../flag.txt).
 
-        My favorite flag is called <iframe src="/flag.txt" width="600" height="450" style="border: none;"></iframe>
+        My favorite flag is called <iframe src="file:///flag.txt" width="600" height="450" style="border: none;"></iframe>. This flag is the best flag in the world.
+
+    
     </p>
 </body>
 </html>
